Finished portfolio section

--- a/styles/style.css
+++ b/styles/style.css
@@ -7,6 +7,7 @@ body{
     font-family: Lato, Helvetica, sans-serif;
 }
 
+/*Start of nav section*/
 nav{
     display: flex;
     flex-direction: row;
@@ -32,10 +33,11 @@ nav h1{
     float: left;
     padding: 0 1vw;
 }
+/*End of nav section*/
 
 /*Start of hero section*/
 .hero_section{
-    padding: 10vh 0;
+    padding: 10vh 11vw;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -50,15 +52,15 @@ nav h1{
 }
 
 .divider{
-    width: 20%;
+    width: 18vw;
     display: flex;
     justify-content: center;
     align-items: center;
     padding: 2.5vh 0;
 }
 
-.divider hr{
-    width: 30%;
+.border{
+    width: 30vw;
     border: none;
     border-top: 4px solid white;
     border-radius: 10px;
@@ -81,4 +83,45 @@ nav h1{
     padding-top: 1vh;
     font-size: 1.5rem;
 }
+/*End of hero section*/
+
+/*Start of Portfolio section*/
+.portfolios_section{
+    padding: 0 11vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.gray_border{
+    border-top: 4px solid #2D3E4F;
+}
+
+.images{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    flex: 1 1 35vw;
+}
+
+.images img{
+    width: 24vw;
+    height: 30vh;
+    padding: 1.5vh 1vw;
+    border-radius: 8%;
+}
+
+.portfolio_title{
+    padding-top: 8vh;
+    color: #2D3E4F;
+    font-size: 3rem;
+    text-transform: uppercase;
+}
+
+.images img:hover{
+    filter: brightness(50%);
+}
+
+/*End of Portfolio section*/
 
