Finished Contact section

--- a/styles/style.css
+++ b/styles/style.css
@@ -166,4 +166,48 @@ nav h1{
 .white{
     color: white;
 }
+/*End of About section*/
+
+/*Start of Contact section*/
+.contact_section{
+    padding: 0 11vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.contact_info{
+    display: flex;
+    flex-direction: column;
+    justify-content: left;
+    align-items: left;
+    width: 50vw;
+}
+
+input, textarea{
+    width: 45vw;
+    height: 5vh;
+    background-color: white;
+    font-size: 24px;
+    border: none;
+    border-bottom: 1px solid lightgray;
+    outline: none;
+    margin-bottom: 5vh;
+    padding: 1vh;
+}
+
+textarea{
+    height: 12vh;
+}
+
+.send{
+    color: white;
+    padding: 2vh 2vw;
+    font-size: 18px;
+    background-color: #7FD4BF;
+    border: none;
+    border-radius: 5px;
+    margin-right: auto;
+}
 
