Added displaying messages page

--- a/styles/style.css
+++ b/styles/style.css
@@ -344,6 +344,16 @@ footer{
     padding: 3vh;
 }
 
+table{
+    margin-top: 1vh;
+    padding: 1vh 1vw;
+    border:2px solid #000000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
 /*Fixing Responsiveness using media query*/
 @media screen and (max-width: 1400px){
     .images img{
